--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -10,6 +10,9 @@
 section {
     display: flex;
     flex-direction: column;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 40px;
+    color: white;
 }
 
 h2 {
@@ -17,7 +20,6 @@ h2 {
 }
 
 form {
-    background-color: aqua;
     display: flex;
     flex-direction: column;
     padding: 60px;
@@ -25,6 +27,7 @@ form {
     border-radius: 20px;
     font-size: larger;
     margin: 10px;
+    justify-content: center;
 }
 
 form h3 {
@@ -46,5 +49,5 @@ form > button {
     border-radius: 30px;
     width: 8em;
     font-family: Filandica-R;
-    margin-top: 10px;
+    margin-top: 20px;
 }
