--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -5,6 +5,7 @@
 
 * {
     margin: 0 auto;
+    padding: 0 auto;
 }
 
 section {
@@ -16,7 +17,7 @@ section {
 }
 
 h2 {
-    padding: 40px;
+    padding: 30px;
 }
 
 form {
@@ -31,7 +32,7 @@ form {
 }
 
 form h3 {
-    padding: 30px;
+    padding: 20px;
 }
 
 form > label {
@@ -50,4 +51,23 @@ form > button {
     width: 8em;
     font-family: Filandica-R;
     margin-top: 20px;
+}
+
+form > button {
+    color: black;
+    font-family: Filandica-R;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    width: 60%;
+    max-width: 60%;
+    transition: .3s linear;
+}
+
+form > button:hover {
+    background-color: black;
+    color: white;
 }
