--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -37,10 +37,50 @@ nav > h1 {
 }
 
 .logout {
-    color: white;
+  color: rgb(214, 214, 214);
+	text-decoration: none;
+	padding: 10px;
+	border-radius: 20px;
+	width: 12%;
+	max-width: 15%;
+	transition: .3s linear;
+}
+
+.logout:hover {
+	color: white;
 }
 
 main {
     margin-top: 6em;
+}
+
+section {
+	display: flex;
+	background-color: rgba(0, 0, 0, .6);
+	padding: 40px;
+}
+
+section > div {
+	display: flex;
+	flex-direction: column;
+}
+
+section > div > a {
+	color: white;
+	background-color: rgb(0, 0, 0);
+	text-align: center;
+	text-decoration: none;
+	font-size: 20px;
+	padding: 10px;
+	border-radius: 20px;
+	margin: 10px;
+	width: 100%;
+	max-width: 100%;
+	transition: .3s linear;
+}
+
+section > div > a:hover {
+	color: black;
+	background-color: white;
 }
 
