--- a/public/assets/css/table.css
+++ b/public/assets/css/table.css
@@ -19,21 +19,32 @@ div {
     justify-content: center;
 }
 
-a {
+.links {
+	display: flex;
+  flex-direction: row;
+}
+
+div > h3 {
+	background-color: rgba(0, 0, 0, .8);
+	text-align: center;
+	margin-top: 20px;
+	padding: 10px 30px;
+}
+
+.links > a {
     color: white;
     font-family: Filandica-R;
     background-color: black;
     text-align: center;
     text-decoration: none;
     font-size: 20px;
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: 20px;
-    width: 12%;
-    max-width: 15%;
+		margin: 20px;
     transition: .3s linear;
 }
 
-a:hover {
+.links > a:hover {
     background-color: white;
     color: black;
 }
@@ -45,7 +56,6 @@ table {
     width: 70%;
     border-collapse: collapse;
     text-align: left;
-    margin-top: 15px;
 }
 
 th {
@@ -64,3 +74,5 @@ td {
 tr:hover td {
     color: rgb(255, 255, 255);
 }
+
+
