--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -35,6 +35,10 @@ form h3 {
     padding: 20px;
 }
 
+form h4 {
+    padding: 20px;
+}
+
 form > label {
     padding: 10px;
 }
@@ -62,8 +66,8 @@ form > button {
     font-size: 20px;
     padding: 10px;
     border-radius: 20px;
-    width: 60%;
-    max-width: 60%;
+    width: 40%;
+    max-width: 40%;
     transition: .3s linear;
 }
 
@@ -72,21 +76,63 @@ form > button:hover {
     color: white;
 }
 
-div > a {
-	color: black;
-	font-family: Filandica-R;
-	background-color: white;
-	text-align: center;
-	text-decoration: none;
-	font-size: 20px;
-	padding: 10px;
-	border-radius: 20px;
-	width: 20%;
-	max-width: 15%;
-	transition: .3s linear;
+.employee {
+    color: black;
+    font-family: Filandica-R;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    width: 60%;
+    max-width: 60%;
+    transition: .3s linear;
 }
 
-div > a:hover {
-	background-color: black;
-	color: white;
+.employee:hover {
+    background-color: black;
+    color: white;
+}
+
+.user {
+    color: black;
+    font-family: Filandica-R;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    width: 15%;
+    max-width: 15%;
+    transition: .3s linear;
+}
+
+.user:hover {
+    background-color: black;
+    color: white;
+}
+
+.links {
+	display: flex;
+  flex-direction: row;
+}
+
+.links > a {
+    color: white;
+    font-family: Filandica-R;
+    background-color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px 20px;
+    border-radius: 20px;
+		margin: 20px;
+    transition: .3s linear;
+}
+
+.links > a:hover {
+    background-color: white;
+    color: black;
 }
