--- a/public/assets/css/table.css
+++ b/public/assets/css/table.css
@@ -29,6 +29,8 @@ div > h3 {
 	text-align: center;
 	margin-top: 20px;
 	padding: 10px 30px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
 
 .links > a {
@@ -75,4 +77,35 @@ tr:hover td {
     color: rgb(255, 255, 255);
 }
 
+button {
+    border: none;
+    width: 6em;
+    color: black;
+    font-family: Filandica-R;
+    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    padding: 5px;
+    border-radius: 20px;
+    transition: .3s linear;
+}
+
+button:hover {
+    background-color: black;
+    color: white;
+}
+
+button > a {
+    font-family: Filandica-R;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    transition: .3s linear;
+}
+
+button > a:hover {
+    color: white;
+}
 
